--- a/src/main/resources/synthea.properties
+++ b/src/main/resources/synthea.properties
@@ -211,5 +211,7 @@ physiology.generators.enabled = false
 # under 20 years old
 growtherrors = false
 
+# set to true to invoke dna synthesis script to add genetic testing results
+# this script is not currently part of the Sythea open source package
 genetictesting = false
 genetictesting.script = /path/to/dna-synthesis-script
